# openair-spgwu-vpp-tp

./: .dockerignore  .gitlab-ci.yml  .travis.yml  Makefile  README.md  init.cnf  init.conf  run.sh  startup.conf  startup_debug.conf
docs/etc/: requirements.txt
dpdk/: Makefile
dpdk/dpdk-18.02_patches/: 0002-alpine-mussl-support.patch
extras/docker/: Dockerfile  Dockerfile.alpine  Dockerfile.devel  Dockerfile.test
src/: configure.ac
src/pkg/debian/: control
src/plugins/: Makefile.am  gtp_up.am  gtpdp.am
src/plugins/gtp-up/: gtp_up.api  gtp_up.c  gtp_up.h  gtp_up_all_api_h.h  gtp_up_api.c  gtp_up_classify.c  gtp_up_http_redirect_server.c  gtp_up_http_redirect_server.h  gtp_up_if_input.c  gtp_up_msg_enum.h  gtp_up_sx.c  gtp_up_sx.h  gtp_up_sx_api.c  gtp_up_sx_api.h  gtp_up_sx_input.c  gtp_up_sx_server.c  gtp_up_sx_server.h  gtp_up_test.c  gtpu_decap.c  gtpu_encap.c  node.c  pfcp.c  pfcp.h
src/plugins/gtpdp/: gtpdp.api  gtpdp.c  gtpdp.h  gtpdp_all_api_h.h  gtpdp_api.c  gtpdp_classify.c  gtpdp_if_input.c  (+13 more)
src/plugins/upf/: CMakeLists.txt  README.md  flowtable.c  flowtable.h  flowtable_init.c  gtpu_decap.c  gtpu_encap.c  gtpu_error.def  node.c  pfcp.c  pfcp.h  upf.api  upf.c  upf.h  upf_adf.c  upf_adf.h  upf_api.c  upf_classify.c  upf_cli.c  upf_flow_node.c  upf_http_redirect_server.c  upf_if_input.c  upf_pfcp.c  upf_pfcp.h  upf_pfcp_api.c  upf_pfcp_api.h  upf_pfcp_server.c  upf_pfcp_server.h  upf_process.c  upf_proxy.c  upf_session_dpo.c  upf_test.c
src/plugins/upf/test/: test_upf.py
src/svm/: svm.c
src/vlib/: main.c
src/vnet/: buffer.h  interface_api.c  interface_format.c
src/vppinfra/: bihash_template.c  bihash_template.h  clib.h  format.c  socket.h  time.h  timer.c  tw_timer_template.c  tw_timer_template.h  unix-formats.c
test/: framework.py  requirements-3.txt
(+12 files in other folders)
